objects/Document_MetaData__c.object
<CustomObject>
    <fields>
        <fullName>AWS_id__c</fullName>
        <label>AWS Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name (Institution)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_for_Customer_IM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Customer IM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_for_Internal_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Internal Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_for_Investors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Investors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_for_Partner_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Partner Portal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Box_File_Id__c</fullName>
        <label>Box File Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_URL__c</fullName>
        <label>Box File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <label>Box Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Disclosure</fullName>
                </value>
                <value>
                    <fullName>Application Package</fullName>
                </value>
                <value>
                    <fullName>Valuation</fullName>
                </value>
                <value>
                    <fullName>Home Condition</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Code__c</fullName>
        <label>Document Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1040</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Add Applicant to Title at Closing</fullName>
                </value>
                <value>
                    <fullName>Additional_Assets_Verification_Required</fullName>
                    <label>Additional Assets Verification Required</label>
                </value>
                <value>
                    <fullName>Additional lien information</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Application Required for All Parties on Title</fullName>
                </value>
                <value>
                    <fullName>Appraisal - 1004D</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                    <label>Appraisal - 1st</label>
                </value>
                <value>
                    <fullName>Second Appraisal</fullName>
                    <label>Appraisal - 2nd</label>
                </value>
                <value>
                    <fullName>Third Appraisal</fullName>
                    <label>Appraisal - 3rd</label>
                </value>
                <value>
                    <fullName>Appraisal Desk Review</fullName>
                </value>
                <value>
                    <fullName>Authorization to Share Information</fullName>
                </value>
                <value>
                    <fullName>Bank Statement</fullName>
                </value>
                <value>
                    <fullName>Brokerage Statement</fullName>
                </value>
                <value>
                    <fullName>CAP Completed</fullName>
                </value>
                <value>
                    <fullName>Certificate of Occupancy</fullName>
                </value>
                <value>
                    <fullName>Certified Documents</fullName>
                </value>
                <value>
                    <fullName>Client must pay down mortgage</fullName>
                    <label>Client Must Pay Down Mortgage - 1st Lender</label>
                </value>
                <value>
                    <fullName>Client must pay down mortgage - 2nd Lender</fullName>
                    <label>Client Must Pay Down Mortgage - 2nd Lender</label>
                </value>
                <value>
                    <fullName>Client must pay down mortgage - 3rd Lender</fullName>
                    <label>Client Must Pay Down Mortgage - 3rd Lender</label>
                </value>
                <value>
                    <fullName>Client must pay off outstanding past due liability</fullName>
                    <label>Client Must Pay Off Outstanding Past Due Liability</label>
                </value>
                <value>
                    <fullName>Client must pay off specific liabilities</fullName>
                    <label>Client Must Pay Off Specific Liabilities</label>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Closing - Assignment of Unison Agreement</fullName>
                </value>
                <value>
                    <fullName>Closing - Closing Statement</fullName>
                </value>
                <value>
                    <fullName>Closing - Curative Grant Deeds</fullName>
                </value>
                <value>
                    <fullName>Closing Documents</fullName>
                </value>
                <value>
                    <fullName>Closing - Final Executed Closing Package</fullName>
                </value>
                <value>
                    <fullName>Closing - Memorandum of Unison Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Year__c</fullName>
        <label>Document Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignore_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValid_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a valid Box URL has been posted back for the given DMD record. This field is used by the Engineering Team for the Document Service: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Indicates whether a valid Box URL has been posted back for the given DMD record.</inlineHelpText>
        <label>Has Valid URL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_in_Box__c</fullName>
        <label>Last Modified in Box</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Document_MetaData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Required_Documents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Minimum Required Documents</label>
        <referenceTo>Minimum_Required_Documents__c</referenceTo>
        <relationshipLabel>Document MetaData</relationshipLabel>
        <relationshipName>Document_MetaData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Named_Customer_on_Document__c</fullName>
        <label>Named Customer on Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocrolus_Status__c</fullName>
        <description>Used to hold status of documents to be parsed by Ocrolus by way of Unison's internal document service.</description>
        <inlineHelpText>Used to hold status of documents to be parsed by Ocrolus by way of Unison's internal document service.</inlineHelpText>
        <label>Ocrolus Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Document_MetaData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Document MetaData</relationshipLabel>
        <relationshipName>Document_MetaData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Text__c</fullName>
        <formula>TEXT(Requirement__r.Requirement__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Current_Conditions__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Document_MetaData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of document that has been determined by the Classifier. Holds the string received by the Document Classifier in the Document Service. This field is used by the Document Service and Research teams: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>The type of document that has been determined by the Classifier.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UploadStatus__c</fullName>
        <description>Indicates status of a Document Service upload for the given DMD record. This field is used by the Engineering Team for the Document Service: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Indicates status of a Document Service upload for the given DMD record.</inlineHelpText>
        <label>Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>See workflow rule: DMD Upload</description>
        <inlineHelpText>If Box File ID and Box URL has a value, checkbox updates to 'True'</inlineHelpText>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wage_and_Income__c</fullName>
        <label>Wage and Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Document MetaData</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DMD-{000000000}</displayFormat>
        <label>Document MetaData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document MetaData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lead_or_Opportunity_is_required</fullName>
        <active>true</active>
        <description>DMD must have a lead or Opportunity associated</description>
        <errorConditionFormula>Lead__c == null &amp;&amp;  Opportunity__c == null</errorConditionFormula>
        <errorMessage>Document must have a lead or Opportunity associated.</errorMessage>
    </validationRules>
</CustomObject>